# ubirch-board-examples

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md  gdb.sh
cmake/: flashutil.cmake  kinetis-sdk-2.0.cmake  ksdk13.cmake  ksdk20.cmake  mmcau.cmake  ubirch-arm-gcc-toolchain.cmake  ubirch-firmware-pek.cmake  ubirch-firmware.cmake  wolfssl.cmake
cmake/Libraries/: flashutil.cmake  mmcau.cmake  wolfssl-benchmark.cmake  wolfssl.cmake
cmake/Platform/: ubirch.cmake
src/: CMakeLists.txt  main.c
src/board/: CMakeLists.txt
src/board/frdm_k82f/: CMakeLists.txt  README.md  board.c  board.h  frdm_k82f.h
src/board/frdm_kl82z/: board.h  frdm_kl82z.h
src/board/ubirch1r02/: CMakeLists.txt  README.md  board.h  cell.h  ubirch1r01.h
src/driver/: CMakeLists.txt
src/driver/crypto/: CMakeLists.txt  crypto.c  crypto.h
src/driver/dbgutil/: CMakeLists.txt  dbgutil.c  dbgutil.h
src/driver/i2c/: CMakeLists.txt  i2c.c  i2c.h
src/driver/isl29125/: CMakeLists.txt  isl29125.c  isl29125.h
src/driver/rtc/: CMakeLists.txt  rtc.c  rtc.h
src/driver/sim800h/: CMakeLists.txt  sim800h.c  sim800h.h  sim800h_core.c  sim800h_core.h  sim800h_debug.c  sim800h_debug.h  sim800h_http.c  sim800h_http.h  sim800h_ops.c  sim800h_ops.h  sim800h_parser.c  sim800h_parser.h
src/driver/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h
src/driver/timer/: CMakeLists.txt  timer.c  timer.h
src/driver/ubirch/crypto/: CMakeLists.txt  crypto.c  crypto.h
src/driver/ubirch/dbgutil/: CMakeLists.txt
src/driver/ubirch/i2c/: CMakeLists.txt
src/driver/ubirch/isl29125/: CMakeLists.txt  isl29125.c
src/driver/ubirch/rtc/: CMakeLists.txt
src/driver/ubirch/sim800h/: sim800h.h  sim800h_core.c  sim800h_debug.h  sim800h_http.c  sim800h_ops.c
src/driver/ubirch/ssd1306/: CMakeLists.txt  ssd1306.c
src/driver/ubirch/timer/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/gsm_commands/: CMakeLists.txt  gsm_urc.h  main.c
src/examples/gsm_console/: CMakeLists.txt  main.c
src/examples/i2c_scan/: CMakeLists.txt  main.c
src/examples/lights-sensor/: CMakeLists.txt  config.h.template  main.c
src/examples/lpuart/: CMakeLists.txt  README.md  board.h
src/examples/oled/: CMakeLists.txt  main.c
src/examples/rgbsensor/: CMakeLists.txt  main.c
src/examples/rtc/: CMakeLists.txt  main.c
src/examples/rtc-test/: CMakeLists.txt  main.c
src/examples/sim800h/: .gdbinit  ubirch_gsm.c
src/examples/ssd1306/: CMakeLists.txt  main.c  ssd1306.c
src/examples/test/: CMakeLists.txt  main.c
src/examples/timer_test/: CMakeLists.txt  main.c
src/examples/ubirch-crypto/: CMakeLists.txt  main.c
src/examples/wolfssl-benchmark/: CMakeLists.txt  main.c
src/examples/wolfssl-test/: README.md  main.c
src/examples/wolfssl-test-ecc/: CMakeLists.txt  ecc_keys.h  main.c  public_key.h
src/examples/wolfssl-test-rsa/: .gdbinit  CMakeLists.txt  main.c  public_key.h
src/flash/: CMakeLists.txt  flash.c
src/ftm/: CMakeLists.txt  main.c
src/gsm_commands/: CMakeLists.txt  main.c
src/gsm_console/: CMakeLists.txt  main.c
src/i2c_scan/: CMakeLists.txt  main.c
src/isl29125/: CMakeLists.txt  isl29125.c  isl29125.h  main.c
src/libs/i2c/: i2c_core.c  i2c_core.h
src/lights-sensor/: CMakeLists.txt  main.c
src/lpuart/: .gdbinit  CMakeLists.txt  clock_config.c  kinetis.cfg  lpuart_polling_transfer.c  pin_mux.c
src/oled/: CMakeLists.txt  main.c
src/oled-fractal/: CMakeLists.txt  main.c
src/oled/ugui/: ugui_config.h
src/rgbsensor/: CMakeLists.txt  main.c
src/rtc/: main.c
src/rtc-test/: CMakeLists.txt  config.h.template  main.c
src/sim800h/: CMakeLists.txt  main.c  ubirch_gsm.c  ubirch_gsm.h
src/ssd1306/: CMakeLists.txt  font5x5.h  main.c  ssd1306.c  ssd1306.h
src/test/: CMakeLists.txt  main.c
src/timer_test/: CMakeLists.txt  main.c
src/ubirch-crypto/: CMakeLists.txt  main.c
src/usb-hid/: CMakeLists.txt  hid_generic.c
src/wolfssl-benchmark/: CMakeLists.txt  main.c
src/wolfssl-test/: CMakeLists.txt  README.md  main.c
src/wolfssl-test-ecc/: CMakeLists.txt  device_key.raw  main.c  test.ecc
src/wolfssl-test-rsa/: CMakeLists.txt  README.md  board.pub.pem  board.txt  key.der  key.pem  main.c  results.txt  test.cipher  test.encr  test.key  test.txt
src/ws2812b/: CMakeLists.txt  main.c
