add_subdirectory(gsm_commands)
add_subdirectory(gsm_console)
add_subdirectory(i2c_scan)
add_subdirectory(lights-sensor)
add_subdirectory(lpuart)
add_subdirectory(oled)
add_subdirectory(rgbsensor)
add_subdirectory(rtc-test)
add_subdirectory(test)
add_subdirectory(timer_test)
if (KinetisSDK_VERSION_MAJOR VERSION_GREATER 1)
  add_subdirectory(ubirch-crypto)
  add_subdirectory(wolfssl-benchmark)
  add_subdirectory(wolfssl-test-ecc)
  add_subdirectory(wolfssl-test-rsa)
endif ()
