add_subdirectory(gsm_commands)
add_subdirectory(gsm_console)
add_subdirectory(i2c_scan)
add_subdirectory(lpuart)
add_subdirectory(oled)
add_subdirectory(rgbsensor)
add_subdirectory(rtc)
add_subdirectory(test)
#add_subdirectory(wolfssl-benchmark)
#add_subdirectory(wolfssl-test-ecc)
add_subdirectory(wolfssl-test-rsa)
