# ADD_EXECUTABLE
ADD_EXECUTABLE(ssd1306 main.c ssd1306.c ../libs/i2c/i2c_core.c)

SET_TARGET_PROPERTIES(ssd1306 PROPERTIES OUTPUT_NAME "ssd1306.elf")

TARGET_LINK_LIBRARIES(ssd1306 -Wl,--start-group)
TARGET_LINK_LIBRARIES(ssd1306 ksdk-device-lib)
TARGET_LINK_LIBRARIES(ssd1306 ksdk-mmcau)
TARGET_LINK_LIBRARIES(ssd1306 ubirch-firmware)
# SYSTEM LIBRARIES
TARGET_LINK_LIBRARIES(ssd1306 m)
TARGET_LINK_LIBRARIES(ssd1306 c)
TARGET_LINK_LIBRARIES(ssd1306 gcc)
TARGET_LINK_LIBRARIES(ssd1306 nosys)
TARGET_LINK_LIBRARIES(ssd1306 -Wl,--end-group)

# MAP FILE
SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG}  -Xlinker -Map=ssd1306.map")
SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} -Xlinker -Map=ssd1306.map")

# BIN AND HEX
ADD_CUSTOM_COMMAND(TARGET ssd1306 POST_BUILD COMMAND ${CMAKE_OBJCOPY} -Oihex $<TARGET_FILE:ssd1306> $<TARGET_FILE_DIR:ssd1306>/ssd1306.hex)
ADD_CUSTOM_COMMAND(TARGET ssd1306 POST_BUILD COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:ssd1306> $<TARGET_FILE_DIR:ssd1306>/ssd1306.bin)
ADD_CUSTOM_COMMAND(TARGET ssd1306 POST_BUILD COMMAND cp $<TARGET_FILE_DIR:ssd1306>/ssd1306.bin ${CMAKE_CURRENT_SOURCE_DIR})
ADD_CUSTOM_COMMAND(TARGET ssd1306 POST_BUILD COMMAND cp $<TARGET_FILE_DIR:ssd1306>/ssd1306.elf ${CMAKE_CURRENT_SOURCE_DIR})
#ADD_CUSTOM_TARGET(burn COMMAND [ -d /Volumes/MBED ] && cp ${CMAKE_CURRENT_SOURCE_DIR}/ssd1306.bin /Volumes/MBED DEPENDS ssd1306)
