# ADD_EXECUTABLE
ADD_EXECUTABLE(i2c_scan main.c)
TARGET_LINK_LIBRARIES(i2c_scan i2c)

SET_TARGET_PROPERTIES(i2c_scan PROPERTIES OUTPUT_NAME "i2c_scan.elf")

TARGET_LINK_LIBRARIES(i2c_scan -Wl,--start-group)
TARGET_LINK_LIBRARIES(i2c_scan ksdk-device-lib)
TARGET_LINK_LIBRARIES(i2c_scan ksdk-mmcau)
TARGET_LINK_LIBRARIES(i2c_scan ubirch-firmware)
# SYSTEM LIBRARIES
TARGET_LINK_LIBRARIES(i2c_scan m)
TARGET_LINK_LIBRARIES(i2c_scan c)
TARGET_LINK_LIBRARIES(i2c_scan gcc)
TARGET_LINK_LIBRARIES(i2c_scan nosys)
TARGET_LINK_LIBRARIES(i2c_scan -Wl,--end-group)

# MAP FILE
SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG}  -Xlinker -Map=i2c_scan.map")
SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} -Xlinker -Map=i2c_scan.map")

# BIN AND HEX
ADD_CUSTOM_COMMAND(TARGET i2c_scan POST_BUILD COMMAND ${CMAKE_OBJCOPY} -Oihex $<TARGET_FILE:i2c_scan> $<TARGET_FILE_DIR:i2c_scan>/i2c_scan.hex)
ADD_CUSTOM_COMMAND(TARGET i2c_scan POST_BUILD COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:i2c_scan> $<TARGET_FILE_DIR:i2c_scan>/i2c_scan.bin)
ADD_CUSTOM_COMMAND(TARGET i2c_scan POST_BUILD COMMAND cp $<TARGET_FILE_DIR:i2c_scan>/i2c_scan.bin ${CMAKE_CURRENT_SOURCE_DIR})
ADD_CUSTOM_COMMAND(TARGET i2c_scan POST_BUILD COMMAND cp $<TARGET_FILE_DIR:i2c_scan>/i2c_scan.elf ${CMAKE_CURRENT_SOURCE_DIR})
#ADD_CUSTOM_TARGET(burn COMMAND [ -d /Volumes/MBED ] && cp ${CMAKE_CURRENT_SOURCE_DIR}/i2c_scan.bin /Volumes/MBED DEPENDS i2c_scan)
