# ADD_EXECUTABLE
ADD_EXECUTABLE(oled main.c)
TARGET_LINK_LIBRARIES(oled ssd1306 i2c)

SET_TARGET_PROPERTIES(oled PROPERTIES OUTPUT_NAME "oled.elf")

TARGET_LINK_LIBRARIES(oled -Wl,--start-group)
TARGET_LINK_LIBRARIES(oled ksdk-device-lib)
TARGET_LINK_LIBRARIES(oled ksdk-mmcau)
TARGET_LINK_LIBRARIES(oled ubirch-firmware)
# SYSTEM LIBRARIES
TARGET_LINK_LIBRARIES(oled m)
TARGET_LINK_LIBRARIES(oled c)
TARGET_LINK_LIBRARIES(oled gcc)
TARGET_LINK_LIBRARIES(oled nosys)
TARGET_LINK_LIBRARIES(oled -Wl,--end-group)

# MAP FILE
SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG}  -Xlinker -Map=oled.map")
SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} -Xlinker -Map=oled.map")

# BIN AND HEX
ADD_CUSTOM_COMMAND(TARGET oled POST_BUILD COMMAND ${CMAKE_OBJCOPY} -Oihex $<TARGET_FILE:oled> $<TARGET_FILE_DIR:oled>/oled.hex)
ADD_CUSTOM_COMMAND(TARGET oled POST_BUILD COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:oled> $<TARGET_FILE_DIR:oled>/oled.bin)
ADD_CUSTOM_COMMAND(TARGET oled POST_BUILD COMMAND cp $<TARGET_FILE_DIR:oled>/oled.bin ${CMAKE_CURRENT_SOURCE_DIR})
ADD_CUSTOM_COMMAND(TARGET oled POST_BUILD COMMAND cp $<TARGET_FILE_DIR:oled>/oled.elf ${CMAKE_CURRENT_SOURCE_DIR})
#ADD_CUSTOM_TARGET(burn COMMAND [ -d /Volumes/MBED ] && cp ${CMAKE_CURRENT_SOURCE_DIR}/oled.bin /Volumes/MBED DEPENDS oled)
