# ADD_EXECUTABLE
ADD_EXECUTABLE(rtc main.c)

SET_TARGET_PROPERTIES(rtc PROPERTIES OUTPUT_NAME "rtc.elf")

TARGET_LINK_LIBRARIES(rtc -Wl,--start-group)
TARGET_LINK_LIBRARIES(rtc ksdk-device-lib)
TARGET_LINK_LIBRARIES(rtc ksdk-mmcau)
TARGET_LINK_LIBRARIES(rtc ubirch-firmware)
# SYSTEM LIBRARIES
TARGET_LINK_LIBRARIES(rtc m)
TARGET_LINK_LIBRARIES(rtc c)
TARGET_LINK_LIBRARIES(rtc gcc)
TARGET_LINK_LIBRARIES(rtc nosys)
TARGET_LINK_LIBRARIES(rtc -Wl,--end-group)

# MAP FILE
SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG}  -Xlinker -Map=rtc.map")
SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} -Xlinker -Map=rtc.map")

# BIN AND HEX
ADD_CUSTOM_COMMAND(TARGET rtc POST_BUILD COMMAND ${CMAKE_OBJCOPY} -Oihex $<TARGET_FILE:rtc> $<TARGET_FILE_DIR:rtc>/rtc.hex)
ADD_CUSTOM_COMMAND(TARGET rtc POST_BUILD COMMAND ${CMAKE_OBJCOPY} -Obinary $<TARGET_FILE:rtc> $<TARGET_FILE_DIR:rtc>/rtc.bin)
ADD_CUSTOM_COMMAND(TARGET rtc POST_BUILD COMMAND cp $<TARGET_FILE_DIR:rtc>/rtc.bin ${CMAKE_CURRENT_SOURCE_DIR})
ADD_CUSTOM_COMMAND(TARGET rtc POST_BUILD COMMAND cp $<TARGET_FILE_DIR:rtc>/rtc.elf ${CMAKE_CURRENT_SOURCE_DIR})
#ADD_CUSTOM_TARGET(burn COMMAND [ -d /Volumes/MBED ] && cp ${CMAKE_CURRENT_SOURCE_DIR}/rtc.bin /Volumes/MBED DEPENDS rtc)
