# ADD_EXECUTABLE
ADD_EXECUTABLE(rtc main.c)

SET_TARGET_PROPERTIES(rtc PROPERTIES OUTPUT_NAME "rtc.elf")

TARGET_LINK_LIBRARIES(rtc -Wl,--start-group)
TARGET_LINK_LIBRARIES(rtc ksdk-device-lib)
TARGET_LINK_LIBRARIES(rtc ksdk-mmcau)
TARGET_LINK_LIBRARIES(rtc ubirch-firmware)
# SYSTEM LIBRARIES
TARGET_LINK_LIBRARIES(rtc m)
TARGET_LINK_LIBRARIES(rtc c)
TARGET_LINK_LIBRARIES(rtc gcc)
TARGET_LINK_LIBRARIES(rtc nosys)
TARGET_LINK_LIBRARIES(rtc -Wl,--end-group)

prepare_flash(rtc)
